fixed margin overflow on userreviews component

--- a/client/src/components/UserReviews/styles.scss
+++ b/client/src/components/UserReviews/styles.scss
@@ -3,7 +3,7 @@
 .user-review-wrapper {
   grid-area: body-review;
   width: 60%;
-  margin: 1rem auto;
+  margin: 0 auto 1rem;
   
   .user-review {
     background: blue;
